Bussiness object added

--- a/src/main/webapp/frontend/package.json
+++ b/src/main/webapp/frontend/package.json
@@ -59,6 +59,7 @@
   },
   "homepage": "https://github.com/jbutko/AngularJS-Boilerplate",
   "dependencies": {
+    "angucomplete-alt": "^3.0.0",
     "toastr": "^2.1.2"
   }
 }
